@@ -6,74 +6,78 @@ import com.ecoland.infrastructure.entity.CampaignEntity;
 import com.ecoland.infrastructure.repository.JpaCampaignRepository;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 public class CampaignRepositoryAdapter implements CampaignRepositoryPort {
 
-	private final JpaCampaignRepository jpaCampaignRepository;
+    private final JpaCampaignRepository repository;
 
-	public CampaignRepositoryAdapter(JpaCampaignRepository jpaCampaignRepository) {
-		this.jpaCampaignRepository = jpaCampaignRepository;
-	}
+    public CampaignRepositoryAdapter(JpaCampaignRepository repository) {
+        this.repository = repository;
+    }
 
-	@Override
-	public List<Campaign> findAll() {
-		return jpaCampaignRepository.findAll().stream().map(this::toDomain).toList();
-	}
+    @Override
+    public List<Campaign> findAll() {
+        return repository.findAll().stream()
+                .map(this::toDomain)
+                .collect(Collectors.toList());
+    }
 
-	@Override
-	public Optional<Campaign> findById(Long id) {
-		return jpaCampaignRepository.findById(id).map(this::toDomain);
-	}
+    @Override
+    public Optional<Campaign> findById(Long id) {
+        return repository.findById(id).map(this::toDomain);
+    }
 
-	@Override
-	public Campaign save(Campaign campaign) {
-		return toDomain(jpaCampaignRepository.save(toEntity(campaign)));
-	}
+    @Override
+    public Campaign save(Campaign campaign) {
+        CampaignEntity entity = toEntity(campaign);
+        CampaignEntity saved = repository.save(entity);
+        return toDomain(saved);
+    }
 
-	@Override
-	public void deleteById(Long id) {
-		jpaCampaignRepository.deleteById(id);
-	}
+    @Override
+    public void deleteById(Long id) {
+        repository.deleteById(id);
+    }
 
-	private Campaign toDomain(CampaignEntity entity) {
-		Campaign campaign = new Campaign();
-		campaign.setId(entity.getId());
-		campaign.setImage(entity.getImage());
-		campaign.setTitle(entity.getTitle());
-		campaign.setDate(entity.getDate());
-		campaign.setTime(entity.getTime());
-		campaign.setLocation(entity.getLocation());
-		campaign.setAddress(entity.getAddress());
-		campaign.setSpots(entity.getSpots());
-		campaign.setParticipants(entity.getParticipants());
-		campaign.setOrganizer(entity.getOrganizer());
-		campaign.setOrganizerContact(entity.getOrganizerContact());
-		campaign.setStatus(entity.getStatus());
-		campaign.setDescription(entity.getDescription());
-		campaign.setRequirements(entity.getRequirements());
-		return campaign;
-	}
+    private Campaign toDomain(CampaignEntity entity) {
+        Campaign domain = new Campaign();
+        domain.setId(entity.getId());
+        domain.setImage(entity.getImage());
+        domain.setTitle(entity.getTitle());
+        domain.setDate(entity.getDate());
+        domain.setTime(entity.getTime());
+        domain.setLocation(entity.getLocation());
+        domain.setAddress(entity.getAddress());
+        domain.setSpots(entity.getSpots());
+        domain.setParticipants(entity.getParticipants());
+        domain.setOrganizer(entity.getOrganizer());
+        domain.setOrganizerContact(entity.getOrganizerContact());
+        domain.setStatus(entity.getStatus());
+        domain.setDescription(entity.getDescription());
+        domain.setRequirements(entity.getRequirements());
+        return domain;
+    }
 
-	private CampaignEntity toEntity(Campaign campaign) {
-		CampaignEntity entity = new CampaignEntity();
-		entity.setId(campaign.getId());
-		entity.setImage(campaign.getImage());
-		entity.setTitle(campaign.getTitle());
-		entity.setDate(campaign.getDate());
-		entity.setTime(campaign.getTime());
-		entity.setLocation(campaign.getLocation());
-		entity.setAddress(campaign.getAddress());
-		entity.setSpots(campaign.getSpots());
-		entity.setParticipants(campaign.getParticipants());
-		entity.setOrganizer(campaign.getOrganizer());
-		entity.setOrganizerContact(campaign.getOrganizerContact());
-		entity.setStatus(campaign.getStatus());
-		entity.setDescription(campaign.getDescription());
-		entity.setRequirements(campaign.getRequirements() == null ? new ArrayList<>() : campaign.getRequirements());
-		return entity;
-	}
+    private CampaignEntity toEntity(Campaign campaign) {
+        CampaignEntity entity = new CampaignEntity();
+        entity.setId(campaign.getId());
+        entity.setImage(campaign.getImage());
+        entity.setTitle(campaign.getTitle());
+        entity.setDate(campaign.getDate());
+        entity.setTime(campaign.getTime());
+        entity.setLocation(campaign.getLocation());
+        entity.setAddress(campaign.getAddress());
+        entity.setSpots(campaign.getSpots());
+        entity.setParticipants(campaign.getParticipants());
+        entity.setOrganizer(campaign.getOrganizer());
+        entity.setOrganizerContact(campaign.getOrganizerContact());
+        entity.setStatus(campaign.getStatus());
+        entity.setDescription(campaign.getDescription());
+        entity.setRequirements(campaign.getRequirements());
+        return entity;
+    }
 }
